# embed-rust

./: .gitignore  Cargo.toml  Readme.md  lib.rs  main.rs  targets.txt
.cargo/: config.toml
.zed/: settings.json
doc/: ssd1315.md
esp32-play/: Cargo.toml
esp32-play/src/: lib.rs  main.rs
esp32-wifi/: Cargo.toml  build.rs
esp32-wifi/src/: lib.rs
examples/: uart.rs
src/: at24c64.rs  display_logger.rs  iic_play.rs  lib.rs  main.rs  sg90.rs  ssd1315.rs
src/display_dirver/: mod.rs  st7789.rs
src/usb/: mod.rs
